--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ h1{
     color: var(--clr-dark);
     padding: 1rem;
     border-radius: 1rem;
+    width: 100%;
 
     h1, h2, h3{
         font-family: "EB Garamond", serif;
@@ -54,4 +55,29 @@ h1{
         font-style: italic;
         font-weight: 100;
     }
+    section{
+        margin: 1rem;
+        padding: 1rem;
+        border: 1px solid var(--clr-dark);
+        border-radius: 1rem;
+        width: 90%;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: start;
+        gap: 3rem;
+
+        img{
+            width: 300px;
+            height: auto;
+            border-radius:0.8rem;
+            margin: 10px;
+        }
+
+        p{
+            min-width: 500px;
+            margin: 1rem;
+        }
+    }
+
 }
